Fixed Chrome mobile overflow bug

--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -9,7 +9,7 @@
     min-width: 100%;
   }
 
-  &__fieldset {
+  &__field {
     @include mixins.flex(column, center, center, 0.5rem);
 
     .fieldset__label {
