--- a/styles/css/login.css
+++ b/styles/css/login.css
@@ -50,22 +50,6 @@ h6 {
   isolation: isolate;
 }
 
-legend {
-  padding: 0;
-  display: table;
-}
-
-fieldset {
-  border: 0;
-  padding: 0.01em 0 0 0;
-  margin: 0;
-  min-width: 0;
-}
-
-body:not(:-moz-handler-blocked) fieldset {
-  display: table-cell;
-}
-
 /* This mixin is for call to action buttons/anchors
    Doesn't necessarily have to be a button */
 html,
@@ -367,7 +351,7 @@ body {
 .form * {
   min-width: 100%;
 }
-.form__fieldset {
+.form__field {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -375,15 +359,15 @@ body {
   gap: 0.5rem;
   flex-wrap: wrap;
 }
-.form__fieldset .fieldset__label {
+.form__field .fieldset__label {
   align-self: start;
 }
-.form__fieldset .fieldset__input {
+.form__field .fieldset__input {
   padding: 0.5rem;
   border: 1px solid lightgrey;
   border-radius: 0.25rem;
 }
-.form__fieldset .fieldset__input:focus {
+.form__field .fieldset__input:focus {
   outline: 2px solid #662dbc;
 }
 .form button[type=submit] {
