--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -49,22 +49,6 @@ h6 {
   isolation: isolate;
 }
 
-legend {
-  padding: 0;
-  display: table;
-}
-
-fieldset {
-  border: 0;
-  padding: 0.01em 0 0 0;
-  margin: 0;
-  min-width: 0;
-}
-
-body:not(:-moz-handler-blocked) fieldset {
-  display: table-cell;
-}
-
 /* This mixin is for call to action buttons/anchors
    Doesn't necessarily have to be a button */
 html,
